Add more clean page to pwa start url

--- a/web/app/assets/images/manifest.json.erb
+++ b/web/app/assets/images/manifest.json.erb
@@ -7,7 +7,7 @@
     "display": "fullscreen",
     "orientation": "portrait",
     "scope": "/",
-    "start_url": "/?utm_source=pwa",
+    "start_url": "/?pwa=true&utm_source=pwa",
     "lang": "pt-BR",
     "categories": ["lifestyle", "entertainment"],
     "icons": [
