--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -18,6 +18,7 @@
     max-width: 100vw;
     //overflow-x: hidden;
   }
+
 }
 
 section {
@@ -30,6 +31,11 @@ section {
   top: 15px;
   font-size: 11px;
   color: #d1d1d1;
+  .is-pwa & {
+    @include mobile-only {
+      display: none;
+    }
+  }
 }
 
 .brand {
@@ -44,6 +50,12 @@ section {
 
   @include mobile-only {
     margin: 30px 0 35px 0;
+  }
+
+  .is-pwa & {
+    @include mobile-only {
+      margin: 30px 24px 15px 24px;
+    }
   }
 
   &__logo {
@@ -115,6 +127,13 @@ section {
     margin: 25px 0 0 0;
     overflow-x: scroll;
     width: 100vw;
+  }
+
+  .is-pwa & {
+    @include mobile-only {
+      margin: 0;
+      padding: 4vh 0 8vh 0;
+    }
   }
 
   &::-webkit-scrollbar{
