--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -10,7 +10,7 @@
 %>
 
 <div class="mdc-layout-grid__cell"
-     id="<%= "cell-#{identifier}-#{event_type}-#{dom_id event}" %>"
+     id="<%= "cell-#{identifier}-#{rand(1_000)}-#{dom_id event}" %>"
      style="order: <%= event_counter + 1 %>;">
   <div class="me-card me-card--feed mdc-card mdc-card--outlined event-<%= event.id %>"
        data-action="mouseover->event#showEventDetails"
@@ -22,7 +22,7 @@
        data-event-similar-loading="false"
        data-event-dominant-color="<%= get_image_dominant_color event %>"
        data-target="event.event"
-       id="<%= dom_id event %>">
+       id="<%= dom_id event, rand(1_000) %>">
     <div class="mdc-card__media mdc-card__media--16-9 <%= 'lazy-bgimage' unless json_request  %>" data-src="<%= event.image[:feed].url unless json_request %>" style="<%= get_image_style_attr event, preload: json_request %>">
       <% if current_user %>
         <div class="me-card__like-button" data-action="click->event#like">
