Change load more icon to refresh when loading

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -87,3 +87,15 @@ $elevated-surface-color: #f9f9f9;
 $filter-background-color: $background-color;
 
 $mdc-theme-primary: $brand-color;
+
+
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
