--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -1,6 +1,7 @@
 @import "normalize";
 @import "media-queries";
 @import "variables";
+@import "@material/snackbar/mdc-snackbar";
 //@import "smile";
 //@import "@material/fab/mdc-fab";
 
