Adjust persona geek to not ber high relationed with courses

--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -94,7 +94,7 @@
                      opts:       {
                          type:    :large,
                          filters: {
-                             categories: false,
+                             categories: true,
                              kinds:      false,
                              ocurrences: true
                          },
@@ -119,7 +119,7 @@
                      opts:       {
                          type:    :large,
                          filters: {
-                             categories: false,
+                             categories: true,
                              kinds:      false,
                              ocurrences: true
                          },
